# learning-spark

./: .gitignore  README.md  get-data.sh  shell.nix
nix/: .nixpkgs-version.json
pyspark/: Dockerfile  Makefile  poetry.toml  pyproject.toml  shell.nix
pyspark/tests/: test_pyspark.py
scala/: shell.nix
