[tool.poetry]
name = "pyspark-experiment"
version = "0.1.0"
description = ""
authors = ["Marcos Benevides <marcos.benevides@datarisk.io>"]

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.770"
isort = "^4.3.21"
safety = "^1.8.7"
hypothesis = "^5.7.0"
python-language-server = "^0.31.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
